--- a/MyFirstAndroidApp/res/values/strings.xml
+++ b/MyFirstAndroidApp/res/values/strings.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">MyFirstAndroidApp</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     
@@ -14,5 +12,10 @@
         <item>이상원</item>
         
     </string-array>
+    
+    <string name="hello">Hello World!</string>
+    <string name="app_name">Golf Skins Game</string>
+    <string name="widgettext">How is today?</string>
+    <string name="widgetmoodtext">:)</string>
 
 </resources>
